change navigation bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,41 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+
+  <style>
+    /* Navigation bar styles */
+    .navbar {
+      width: 100%; /* Set the desired width, e.g., 100% to span the entire viewport width */
+      height: 100px; /* Set the desired height, e.g., 200px */
+      background-image: url('background.jpg'); /* Replace 'your-background-image.jpg' with the path to your background image */
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      padding: 20px 0; /* Add some padding to the top and bottom */
+    }
+    
+
+    .navbar-brand {
+      font-size: 36px; /* Increase the font size for the brand/logo */
+      font-family: 'Oswald', sans-serif; /* Use your preferred font-family */
+      color: #0a0707; /* Text color */
+    }
+  
+    .navbar-nav > li > a {
+      font-size: 20px; /* Increase the font size for the navigation links */
+      font-family: 'Oswald', sans-serif; /* Use your preferred font-family */
+      color: #070505; /* Text color */
+    }
+  
+    .navbar-toggle {
+      background-color: #0a0909; /* Color of the toggle button */
+    }
+  
+    .navbar-toggle .icon-bar {
+      background-color: #07090c; /* Color of the toggle button's bars */
+    }
+  </style>
+
 </head>
 <body>
 
