--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="styles.css">
 
   <style>
     /* Navigation bar styles */
@@ -48,7 +49,7 @@
       background-color: #07090c; /* Color of the toggle button's bars */
     }
   </style>
-
+  <button id="theme-toggle" class="btn btn-default" style="float:right;margin:8px 0;">Theme</button>
 </head>
 <body>
 
@@ -77,7 +78,7 @@
 	</nav>
   
   <!-- Page Content -->
-    <div class="container">
+    <div class="container page">
 
         <div class="row">
 
@@ -124,7 +125,7 @@
     
     <!-- Other people may like it too! -->
     <a style="color:#07090c;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
-    
+    <script src="app.js"></script>
 </body>
 
 </html>
