Enhance publication lists with classes and attributes

--- a/publication.html
+++ b/publication.html
@@ -83,7 +83,7 @@
         <h2>Publications</h2>
         <!-- Your publications content goes here -->
         <h3>Journal</h3><br/>
-        <ul>
+        <ul class="pub-list" data-reveal>
           <!-- Include your publication list here -->
           <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/10190133">TAKDE: Temporal Adaptive Kernel Density Estimator for Real-Time Dynamic Density Estimation</a> 
             <br> <strong>Yinsong Wang</strong>, Yu Ding, Shahin Shahrampour
@@ -103,7 +103,7 @@
         </li>
         </ul>
         <h3>Conference</h3><br/>
-        <ul>
+        <ul class="pub-list" data-reveal>
           <!-- Include your conference publications here -->
             <li class="paper"><a href="https://www.sciencedirect.com/science/article/pii/S1877050923006786">Estimating Traffic Density using Transformer Decoders</a>. 
               <br> <strong>Yinsong Wang</strong>, Jing Zhang, Daniel Nikovski, Takuro Kojima
