--- a/publication.html
+++ b/publication.html
@@ -15,11 +15,11 @@
     /* Navigation bar styles */
     .navbar {
       width: 100%; /* Set the desired width, e.g., 100% to span the entire viewport width */
-      height: 100px; /* Set the desired height, e.g., 200px */
+      /* height: 100px; Set the desired height, e.g., 200px */
       background-image: url('background.jpg'); /* Replace 'your-background-image.jpg' with the path to your background image */
       background-size: contain;
       background-repeat: no-repeat;
-      background-attachment: fixed;
+      /* background-attachment: fixed; */
       padding: 20px 0; /* Add some padding to the top and bottom */
     }
     
@@ -77,7 +77,7 @@
 	</nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container page">
     <div class="row">
       <!-- Publications -->
       <div class="col-md-12">
