change publication style and cv and bio

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                   <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Yinsong Wang</b></div><br> 
                   <div style="font-family: 'Oswald', sans-serif; font-size: 24px;"><b>Contact: wang.yinso at northeastern dot edu</b></div><br>  
                   <div style="font-family: 'Oswald', sans-serif; font-size: 24px;"><b>About</b></div><br>           
-					<p style="font-size: 24px;">Yinsong Wang received his B.S. degree in Mechanical Engineering from Shandong University, China, in 2017, and his M.S. degree in Manufacturing System Engineering and Management from The Hong Kong Polytechnic University, 
-            Hong Kong, in 2018. He is currently working toward a Ph.D. degree in Industrial Engineering at Northeastern University.</p>
+					<p style="font-size: 24px;">Yinsong Wang is a postdoctoral fellow at Georgia Institute of Technology, H. Milton Stewart School of Industrial and Systems Engineering. He earned his Ph.D. in Industrial Engineering at Northeastern University, his M.S. in Manufacutring System Engineering and Management at The Hong Kong Polytechnic University, and his BEng. in Mechanical Engineering at Shandong University. 
+            His research interest spans across data science, machine learning, information theory, and statistics.</p>
 					
                 </div>
             </div> 
@@ -101,10 +101,10 @@
             <div class="col-md-4" data-reveal>
               <!-- Main Image -->
               <img class="img-responsive" src="Yinsong.jpg" alt=""><br>
-                <p>Department of Mechanical and Industrial Engineering<br>
-                Northeastern University<br>
-                360 Huntington Ave<br>
-                Boston <br>
+                <p>H. Milton Stewart School of Industrial and Systems Engineering<br>
+                Georgia Institute of Technology<br>
+                765 Ferst Dr NW<br>
+                Atlanta, GA 30332<br>
                 United States<br>
                 </p>
             </div>
@@ -113,7 +113,9 @@
             <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <dd><a href="https://scholar.google.com/citations?user=j87QtCAAAAAJ&hl=en">Google Scholar</a></dd> 
-              <dd><a href="https://www.linkedin.com/in/yinsong-wang-126838b9?challengeId=AQFhGlMibCMSUwAAAYmYwOeciYEh30wthq7RW2WFlBcPnTkUyChfyclcVHqLfw42Bnbmr3MOeLHCviAKdRGgfUoKKcU5l3u_KQ&submissionId=5251725f-15cf-7517-809e-bab94ed22331&challengeSource=AgE1CQhQqJ7bPQAAAYmYwRBGeojLLRoFOs440HiaRTTDukZ-rfssZ4AnPR3dqbI&challegeType=AgHVhe8D-IvM-wAAAYmYwRBK5OJkjhysSpPONL16UIuPNwqmWxN0PSE&memberId=AgGLeQ7Fa7zxrwAAAYmYwRBNukQ4rUZOO3V-rkRxVft_FPE&recognizeDevice=AgFmxNjWJJZHswAAAYmYwRBRpfc9Wri9FCFMC05EGrhT1MXnEdZz">LinkedIn</a></dd>
+              <dd><a href="https://www.linkedin.com/in/yinsong-wang-126838b9/">LinkedIn</a></dd>
+              <dd><a href="https://orcid.org/0000-0001-8232-5586">ORCID</a></dd>
+              <dd><a href="cv.pdf">CV</a></dd>
             </div>
 
             
