Update bio and publications

--- a/index.html
+++ b/index.html
@@ -89,10 +89,15 @@
                 
                 <div style="margin-top:3%; text-align:justify;" data-reveal>
                   <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Yinsong Wang</b></div><br> 
-                  <div style="font-family: 'Oswald', sans-serif; font-size: 24px;"><b>Contact: wang.yinso at northeastern dot edu</b></div><br>  
+                  <div style="font-family: 'Oswald', sans-serif; font-size: 24px;"><b>Contact: ywang4542 at gatech dot edu</b></div><br>  
                   <div style="font-family: 'Oswald', sans-serif; font-size: 24px;"><b>About</b></div><br>           
-					<p style="font-size: 24px;">Yinsong Wang is a postdoctoral fellow at Georgia Institute of Technology, H. Milton Stewart School of Industrial and Systems Engineering. He earned his Ph.D. in Industrial Engineering at Northeastern University, his M.S. in Manufacutring System Engineering and Management at The Hong Kong Polytechnic University, and his BEng. in Mechanical Engineering at Shandong University. 
-            His research interest spans across data science, machine learning, information theory, and statistics.</p>
+					<p style="font-size: 18px;">
+              Yinsong Wang is a postdoctoral fellow at the <a href="https://www.isye.gatech.edu/" target="_blank">H. Milton Stewart School of Industrial and Systems Engineering</a>, Georgia Institute of Technology. 
+              He is fortunate to be co-advised by <a href="https://sites.google.com/view/yuding/home" target="_blank">Dr. Yu Ding</a> and <a href="https://sites.google.com/site/liuxiaosite1/" target="_blank">Dr. Xiao Liu</a>. 
+              Yinsong received his Ph.D. in Industrial Engineering from Northeastern University. He was fortunate to be mentored by <a href="https://coe.northeastern.edu/people/shahrampour-shahin/" target="_blank">Dr. Shahin Shahrampour</a>. 
+              He also earned an M.S. in Manufacturing Systems Engineering and Management from The Hong Kong Polytechnic University and a B.Eng. in Mechanical Engineering from Shandong University. 
+              His research interests span data science, machine learning, information theory, and statistics.
+          </p>
 					
                 </div>
             </div> 
