--- a/publication.html
+++ b/publication.html
@@ -86,41 +86,60 @@
         <h3>Journal</h3><br/>
         <ul class="pub-list" data-reveal>
           <!-- Include your publication list here -->
-          <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/10190133">TAKDE: Temporal Adaptive Kernel Density Estimator for Real-Time Dynamic Density Estimation</a> 
+           <li class="paper"><a href="https://arxiv.org/pdf/2302.02224">TAP: The attention patch for cross-modal knowledge transfer from unlabeled data</a> 
             <br> <strong>Yinsong Wang</strong>, Yu Ding, Shahin Shahrampour
-            <br> <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (IF: 24.31)</em>
+            <br> <em>"Transactions on Machine Learning Research,"</em> 2024.
           </li>
-          <li class="paper"><a href="https://link.springer.com/article/10.1007/s43670-022-00022-w">Learning from Non-IID Data in Hilbert Spaces: An Optimal Recovery Perspective</a> 
+          <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/10190133">TAKDE: Temporal adaptive kernel density estimator for real-time dynamic density estimation</a> 
+            <br> <strong>Yinsong Wang</strong>, Yu Ding, Shahin Shahrampour
+            <br> <em>"IEEE Transactions on Pattern Analysis and Machine Intelligence,"</em> vol. 45, no. 11, pp. 13831-13843, 2023.
+          </li>
+          <li class="paper"><a href="https://link.springer.com/article/10.1007/s43670-022-00022-w">Learning from non-iid data in Hilbert spaces: An optimal recovery perspective</a> 
             <br>Simon Foucart, Chunyang Liao, Shahin Shahrampour, <strong>Yinsong Wang</strong> (alphabetical order)
-            <br> <em>Sampling Theory, Signal Processing, and Data Analysis</em>
+            <br> <em>"Sampling Theory, Signal Processing, and Data Analysis,"</em> vol. 20, no. 1, p. 5, 2022.
           </li>
-          <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9614652">ORCCA: Optimal Randomized Canonical Correlation Analysis</a> 
+          <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9614652">ORCCA: Optimal randomized canonical correlation analysis</a> 
             <br> <strong>Yinsong Wang</strong>, Shahin Shahrampour
-            <br> <em>IEEE Transactions on Neural Networks and Learning Systems (IF: 14.26)</em>
+            <br> <em>"IEEE Transactions on Neural Networks and Learning Systems,"</em> vol. 34, no. 8, pp. 5024-5036, 2021.
           </li>
-        <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9474957">Classification of Officers’ Driving Situations Based on Eye-Tracking and Driver Performance Measures</a> 
+        <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9474957">Classification of officers’ driving situations based on eye-tracking and driver performance measures</a> 
           <br>Maryam Zahabi, <strong>Yinsong Wang</strong>, Shahin Shahrampour
-          <br> <em>IEEE Transactions on Human-Machine Systems (IF:4.142)</em>
+          <br> <em>"IEEE Transactions on Human-Machine Systems,"</em> vol. 51, no. 4, pp. 394-402, 2021.
         </li>
         </ul>
         <h3>Conference</h3><br/>
         <ul class="pub-list" data-reveal>
           <!-- Include your conference publications here -->
-            <li class="paper"><a href="https://www.sciencedirect.com/science/article/pii/S1877050923006786">Estimating Traffic Density using Transformer Decoders</a>. 
+            <li class="paper"><a href="https://www.sciencedirect.com/science/article/pii/S1877050923006786">Estimating traffic density using transformer decoders</a>
               <br> <strong>Yinsong Wang</strong>, Jing Zhang, Daniel Nikovski, Takuro Kojima
-              <br> The 14th International Conference on Ambient Systems, Networks and Technologies Networks (ANT) and The 6th International Conference on Emerging Data and Industry 4.0 (EDI40)
+              <br> <em>"The 4th International Workshop on Statistical Methods and Artificial Intelligence,"</em> Leuven, Belgium, Mar 2024, pp. 1027-1032.
             </li>
-            <li class="paper"><a href="#">Tracking Dynamic Gaussian Density with a Theoretically Optimal Sliding Window Approach</a>. 
+            <li class="paper"><a href="https://link.springer.com/chapter/10.1007/978-3-031-52670-1_27">Tracking dynamic Gaussian density with a theoretically optimal sliding window approach</a>
               <br> <strong>Yinsong Wang</strong>, Yu Ding, Shahin Shahrampour
-              <br> InfoSymbiotics/Dynamic Data Driven Applications Systems (DDDAS) 2022
+              <br> <em> "The 4th International Conference on Dynamic Data Driven Applications Systems,"</em> Cambridge, USA, Oct 2022, pp. 275-282.
             </li>
-            <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9443511">Cell Association via Boundary Detection: A Scalable Approach Based on Data-Driven Random Features</a>. 
+            <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9443511">Cell association via boundary detection: A scalable approach based on data-driven random features</a>
               <br> <strong>Yinsong Wang</strong>, Hessam Mahdavifar, Kamran Entesari, Shahin Shahrampour
-              <br> 54th Asilomar Conference on Signals, Systems, and Computers
+              <br> <em>"54th Asilomar Conference on Signals, Systems, and Computers,"</em> Virtual, Oct 2020, pp. 1027-1032.
             </li>
-            <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9147254">Distributed Parameter Estimation in Randomized One-hidden-layer Neural Networks</a>. 
+            <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9147254">Distributed parameter estimation in randomized one-hidden-layer neural networks</a>
               <br> <strong>Yinsong Wang</strong>, Shahin Shahrampour
-              <br> American Control Conference (ACC) 2020
+              <br> <em>"American Control Conference (ACC) 2020,"</em> Virtual, Jul 2020., pp. 737-742.
+            </li>
+        </ul>
+        <h3>Under Review</h3><br/>
+        <ul class="pub-list" data-reveal>
+          <!-- Include your conference publications here -->
+            <li class="paper"><a href="#">Mutual Information Surprise: Rethinking unexpectedness in autonomous systems</a>
+              <br> <strong>Yinsong Wang</strong>, Quan Zeng, Xiao Liu, Yu Ding
+              <br> submitted to <em>"INFORMS Journal of Data Science"</em>.
+            </li>
+        </ul>
+        <h3>Working Papers</h3><br/>
+        <ul class="pub-list" data-reveal>
+          <!-- Include your conference publications here -->
+            <li class="paper"><a href="#">Understanding consistency regularization via neural distance penalty</a>
+              <br> <strong>Yinsong Wang</strong>, Shahin Shahrampour
             </li>
         </ul>
       </div>
