Add theme button

--- a/publication.html
+++ b/publication.html
@@ -120,11 +120,11 @@
             </li>
             <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9443511">Cell association via boundary detection: A scalable approach based on data-driven random features</a>
               <br> <strong>Yinsong Wang</strong>, Hessam Mahdavifar, Kamran Entesari, Shahin Shahrampour
-              <br> <em>"54th Asilomar Conference on Signals, Systems, and Computers,"</em> Virtual, Oct 2020, pp. 1027-1032.
+              <br> <em>"The 54th Asilomar Conference on Signals, Systems, and Computers,"</em> Virtual, Oct 2020, pp. 1027-1032.
             </li>
             <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/9147254">Distributed parameter estimation in randomized one-hidden-layer neural networks</a>
               <br> <strong>Yinsong Wang</strong>, Shahin Shahrampour
-              <br> <em>"American Control Conference (ACC) 2020,"</em> Virtual, Jul 2020., pp. 737-742.
+              <br> <em>"The 2020 American Control Conference,"</em> Virtual, Jul 2020., pp. 737-742.
             </li>
         </ul>
         <h3>Under Review</h3><br/>
