Photo Update, button removal, author edit

--- a/publication.html
+++ b/publication.html
@@ -87,7 +87,7 @@
         <ul class="pub-list" data-reveal>
           <!-- Include your publication list here -->
            <li class="paper"><a href="https://arxiv.org/pdf/2302.02224">TAP: The attention patch for cross-modal knowledge transfer from unlabeled data</a> 
-            <br> <strong>Yinsong Wang</strong>, Yu Ding, Shahin Shahrampour
+            <br> <strong>Yinsong Wang</strong>, Shahin Shahrampour
             <br> <em>"Transactions on Machine Learning Research,"</em> 2024.
           </li>
           <li class="paper"><a href="https://ieeexplore.ieee.org/abstract/document/10190133">TAKDE: Temporal adaptive kernel density estimator for real-time dynamic density estimation</a> 
@@ -140,6 +140,16 @@
           <!-- Include your conference publications here -->
             <li class="paper"><a href="#">Understanding consistency regularization via neural distance penalty</a>
               <br> <strong>Yinsong Wang</strong>, Shahin Shahrampour
+              <br> submitted to <em>"IEEE Transactions on Pattern Analysis and Machine Intelligence"</em>.
+            </li>
+            <li class="paper"><a href="#">Continuous Mutual Information Surprise</a>
+              <br> <strong>Lead author</strong>.
+            </li>
+            <li class="paper"><a href="#">Score-based Mean Embedding for Distribution Regression</a>
+              <br> <strong>Lead author</strong>.
+            </li>
+            <li class="paper"><a href="#">Fast Kernel Kalman Filter</a>
+              <br> <strong>Co author</strong>.
             </li>
         </ul>
       </div>
