--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
   <style>
@@ -132,6 +132,29 @@
     <!-- Other people may like it too! -->
     <a style="color:#07090c;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
     <script src="app.js"></script>
+    <script>
+      const toggle = document.createElement('button');
+      toggle.textContent = '🌙 / ☀️';
+      toggle.style.position = 'fixed';
+      toggle.style.bottom = '20px';
+      toggle.style.right = '20px';
+      toggle.style.padding = '10px';
+      toggle.style.borderRadius = '8px';
+      toggle.style.border = 'none';
+      toggle.style.cursor = 'pointer';
+      document.body.appendChild(toggle);
+
+      toggle.addEventListener('click', () => {
+        document.body.classList.toggle('dark-mode');
+        document.body.classList.toggle('light-mode');
+        const mode = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
+        localStorage.setItem('mode', mode);
+      });
+
+      // remember preference
+      const saved = localStorage.getItem('mode');
+      if (saved) document.body.classList.add(saved + '-mode');
+    </script>
 </body>
 
 </html>
