Update Job market information

--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
               He also earned an M.S. in Manufacturing Systems Engineering and Management from The Hong Kong Polytechnic University and a B.Eng. in Mechanical Engineering from Shandong University. 
               His research interests span data science, machine learning, information theory, and statistics.
           </p>
-					
+          <hr>
+          <div style="font-family: 'Roboto', sans-serif; font-size: 24px;"><b>News & Updates</b></div><br>
+
+          <p style="font-size: 18px;">
+            <strong>• Academic Job Market 2025–2026:</strong> I am currently on the academic job market and open to tenure-track faculty opportunities in industrial engineering, data science, and related areas.<br><br>
+            <strong>• Upcoming Conference:</strong> I will be attending INFORMS 2025 in Atlanta, GA. My talk is scheduled for Tuesday, October 28th, 2025, at 08:00 AM in Building A Level 3 A313. I look forward to connecting with fellow researchers and professionals in the field.<br><br>
+          </p>					
                 </div>
             </div> 
 
