Update award and section name

--- a/index.html
+++ b/index.html
@@ -314,11 +314,12 @@
                 <li><a href="#news">News</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#publications">Publications</a></li>
+                <li><a href="#awards">Awards</a></li>
             </ul>
         </nav>
 
         <section id="about">
-            <h2>About Me</h2>
+            <h2>About Me & My Research</h2>
             <div style="text-align: center; margin: 30px 0;">
                 <img src="gt_campus.jpg" 
                      alt="Georgia Tech Campus" 
@@ -356,6 +357,11 @@
                 <div class="date">2018 - 2024</div>
                 <h3 style="color: #2d3748; margin: 8px 0;">Ph.D. in Industrial Engineering</h3>
                 <p style="color: #4a5568;">Northeastern University | Advisor: <a href="https://coe.northeastern.edu/people/shahrampour-shahin/" target="_blank">Dr. Shahin Shahrampour</a></p>
+            </div>
+            <div class="education-item">
+                <div class="date">2018 - 2021</div>
+                <h3 style="color: #2d3748; margin: 8px 0;">Ph.D. Candidate in Industrial Engineering</h3>
+                <p style="color: #4a5568;">Texas A&M University | Advisor: <a href="https://coe.northeastern.edu/people/shahrampour-shahin/" target="_blank">Dr. Shahin Shahrampour</a></p>
             </div>
             <div class="education-item">
                 <div class="date">2017 - 2018</div>
@@ -450,6 +456,25 @@
                     <div class="authors"><strong>Co author</strong></div>
                 </div>
             </div>
+        
+            <section id="awards">
+                <h2>Awards</h2>
+                <div class="award-item" style="margin-bottom:18px; padding:18px; background:#f7fafc; border-radius:12px; border-left:4px solid #B3A369;">
+                    <strong>Yamamura Research Award</strong> &mdash; Northeastern University, Apr 2025
+                </div>
+                <div class="award-item" style="margin-bottom:18px; padding:18px; background:#f7fafc; border-radius:12px; border-left:4px solid #B3A369;">
+                    <strong>Teaching Fellow Award</strong> &mdash; Northeastern University, Dec 2023
+                </div>
+                <div class="award-item" style="margin-bottom:18px; padding:18px; background:#f7fafc; border-radius:12px; border-left:4px solid #B3A369;">
+                    <strong>John and Katharine Cipolla Ph.D. Merit Award</strong> &mdash; Northeastern University, Dec 2022
+                </div>
+                <div class="award-item" style="margin-bottom:18px; padding:18px; background:#f7fafc; border-radius:12px; border-left:4px solid #B3A369;">
+                    <strong>Best Poster Award</strong> &mdash; Texas A&M University ISEN Department, Nov 2019
+                </div>
+                <div class="award-item" style="margin-bottom:18px; padding:18px; background:#f7fafc; border-radius:12px; border-left:4px solid #B3A369;">
+                    <strong>Department Scholarship</strong> &mdash; Texas A&M University ISEN Department, Jan 2019
+                </div>
+            </section>
 
     <script>
         // Smooth scrolling for navigation
