Update publication name

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <h3>Working Papers</h3>
             <div>
                 <div class="publication-item">
-                    <div class="publication-title"><a href="#">Understanding consistency regularization via neural distance penalty</a></div>
+                    <div class="publication-title"><a href="#">Understanding consistency regularization via neural net distance</a></div>
                     <div class="authors"><strong>Yinsong Wang</strong>, Shahin Shahrampour</div>
                     <div class="venue">submitted to "IEEE Transactions on Pattern Analysis and Machine Intelligence".</div>
                 </div>
