Update EP patent

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <div class="publication-item">
                     <div class="publication-title"><a href="https://patents.google.com/patent/EP4457791A1/en?oq=EP4457791" target="_blank">System and Method for Estimating a Future Traffic Density in an Environment</a></div>
                     <div class="authors">Jing Zhang, <strong>Yinsong Wang</strong>, Daniel Nikovski</div>
-                    <div class="venue">(EU Patent No. EP4457791A1). European Patent Office.</div>
+                    <div class="venue">(EP Patent No. EP4457791A1). European Patent Office.</div>
                 </div>
             </div>
         
