--- a/index.html
+++ b/index.html
@@ -448,23 +448,23 @@
                     <div class="authors"><strong>Lead author</strong></div>
                 </div>
                 <div class="publication-item">
-                    <div class="publication-title"><a href="#">Score-based Mean Embedding for Distribution Regression</a></div>
+                    <div class="publication-title"><a href="#">Score-based mean embedding for distribution regression</a></div>
                     <div class="authors"><strong>Lead author</strong></div>
                 </div>
                 <div class="publication-item">
-                    <div class="publication-title"><a href="#">Fast Kernel Kalman Filter</a></div>
+                    <div class="publication-title"><a href="#">Fast kernel Kalman filter</a></div>
                     <div class="authors"><strong>Co author</strong></div>
                 </div>
             </div>
             <h3>Patents</h3>
             <div>
                 <div class="publication-item">
-                    <div class="publication-title"><a href="https://patents.google.com/patent/US20240304081A1/en?oq=20240304081" target="_blank">System and Method for Estimating a Future Traffic Density in an Environment</a></div>
+                    <div class="publication-title"><a href="https://patents.google.com/patent/US20240304081A1/en?oq=20240304081" target="_blank">System and method for estimating a future traffic density in an environment</a></div>
                     <div class="authors">Jing Zhang, <strong>Yinsong Wang</strong>, Daniel Nikovski</div>
                     <div class="venue">(U.S. Patent No. US20240304081). United States Patent and Trademark Office.</div>
                 </div>
                 <div class="publication-item">
-                    <div class="publication-title"><a href="https://patents.google.com/patent/EP4457791A1/en?oq=EP4457791" target="_blank">System and Method for Estimating a Future Traffic Density in an Environment</a></div>
+                    <div class="publication-title"><a href="https://patents.google.com/patent/EP4457791A1/en?oq=EP4457791" target="_blank">System and method for estimating a future traffic density in an environment</a></div>
                     <div class="authors">Jing Zhang, <strong>Yinsong Wang</strong>, Daniel Nikovski</div>
                     <div class="venue">(EP Patent No. EP4457791A1). European Patent Office.</div>
                 </div>
