Add operational to bio

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             </div>
             <p style="font-size: 1.1em; line-height: 1.8; color: #4a5568;">
                 I am a postdoctoral fellow at the <a href="https://www.isye.gatech.edu/" target="_blank">H. Milton Stewart School of Industrial and Systems Engineering</a>, Georgia Institute of Technology.<br>
-                My research focuses on enabling the future of data-driven, closed-loop scientific and engineering systems. 
+                My research focuses on enabling the future of data-driven, closed-loopscientific, operational, and engineering systems. 
                 I study three fundamental pillars of learning systems—approximation theory, estimation theory, and optimization theory—with an emphasis on addressing the challenges of efficiency, multimodality, and adaptability. 
                 These efforts have led to practical applications in manufacturing automation, human-machine collaboration, and wireless communication.
             </p>
