Update job market annoucement

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <h2>News & Updates</h2>
             <div class="news-item">
                 <div class="date">2025–2026</div>
-                <p><strong>Academic Job Market:</strong> I am currently on the academic job market and open to tenure-track faculty opportunities in industrial engineering, data science, and related areas.</p>
+                <p><strong>Academic Job Market:</strong> I am currently on the academic job market and open to tenure-track faculty opportunities.</p>
             </div>
             <div class="news-item">
                 <div class="date">October 2025</div>
