--- a/index.html
+++ b/index.html
@@ -341,7 +341,10 @@
             </div>
             <div class="news-item">
                 <div class="date">October 2025</div>
-                <p><strong>Upcoming Conference:</strong> I will be attending INFORMS 2025 in Atlanta, GA. My talk is scheduled for Tuesday, October 28th, 2025, at 08:00 AM in Building A Level 3 A313. I look forward to connecting with fellow researchers and professionals in the field.</p>
+                <p><strong>Upcoming Conference:</strong> I will be attending INFORMS 2025 in Atlanta, GA.<br>
+                    My talk is scheduled for Tuesday, October 28th, 2025, at 08:00 AM in Building A Level 3 A313. <br>
+                    We are also hosting a session on "Frontiers of Machine Learning for Autonomous and Intelligent Manufacturing Systems" on October 26th, 2025, at 11:00 AM in Building B Level 4 B408.
+                    I look forward to connecting with fellow researchers and professionals in the field.</p>
             </div>
         </section>
 
