Conference update IOS 2026

--- a/index.html
+++ b/index.html
@@ -340,11 +340,10 @@
                 <p><strong>Academic Job Market:</strong> I am currently on the academic job market and open to tenure-track faculty opportunities.</p>
             </div>
             <div class="news-item">
-                <div class="date">October 2025</div>
-                <p><strong>Upcoming Conference:</strong> I will be attending INFORMS 2025 in Atlanta, GA.<br>
-                    My talk is scheduled for Tuesday, October 28th, 2025, at 08:00 AM in Building A Level 3 A313. <br>
-                    We are also hosting a session on "Frontiers of Machine Learning for Autonomous and Intelligent Manufacturing Systems" on October 26th, 2025, at 11:00 AM in Building B Level 4 B408.
-                    I look forward to connecting with fellow researchers and professionals in the field.</p>
+                <div class="date">March 2026</div>
+                <p><strong>Upcoming Conference:</strong> I will be attending the 2026 INFORMS Optimization Society Conference in Atlanta, GA.<br>
+                    I will be presenting our recent work, "Understanding Measure Consistency Regularization via Neural Distance Penalty".<br>
+                    If you would like to learn about how ideas from optimal transport and minmax optimization could explain the effectiveness of imputation and semi-supervised learning, please consider attending the talk!</p>
             </div>
         </section>
 
